# routes/customers.js
@@ -1,25 +1,26 @@
 const express = require('express');
 const pool = require('../db');
 const { DateTime } = require('luxon');
+const { encrypt, decryptIsMatch } = require('../modules/password');
 
 const customersRouter = express.Router();
 
 
-
-
 //NOTE the question mark in checkExisting.rows?.length is known as optional chaining, and it will return undefined for an non-existant property from an API instead of an error messsage like 'cannot read property 'something' of undefined.'
+
 
 //create a new login
 customersRouter.post('/register', async (req, res) => {
     try {
         const { first_name, last_name, user_name, password } = req.body;
+        const passwordEnc = encrypt(password);
         const date = DateTime.now().toISODate();
         const checkExisting = await pool.query('SELECT user_name FROM customers WHERE user_name = $1', [user_name]);
         if (checkExisting.rows?.length) {
             res.json(`User name ${user_name} has already been taken`);
             return;
         }
-        const newLogin = await pool.query('INSERT INTO customers (user_name, password, date_created, contact_id, first_name, last_name) VALUES ($1, $2, $3, null, $4, $5) RETURNING user_name, date_created, contact_id, first_name, last_name ', [user_name, password, date, first_name, last_name]);
+        const newLogin = await pool.query('INSERT INTO customers (user_name, password, date_created, contact_id, first_name, last_name) VALUES ($1, $2, $3, null, $4, $5) RETURNING user_name, date_created, contact_id, first_name, last_name ', [user_name, passwordEnc, date, first_name, last_name]);
         res.json(newLogin.rows[0]);
         
     } catch (err) {
@@ -58,23 +59,28 @@ customersRouter.put('/contact/:contactId', async (req, res) => {
     }
 })
 
-
-
 //get an existing customer login by username and password
 customersRouter.get('/login/:username/:password', async (req, res) => {
     try {
         const { username, password } = req.params;
-        const existingCustomer = await pool.query('SELECT * FROM customers WHERE user_name = $1 AND password = $2', [username, password]);
-        if (!existingCustomer.rows?.length) {
+        const user = await pool.query('SELECT * FROM customers WHERE user_name = $1', [username]);
+        if (!user.rows?.length) {
             res.status(401).json('Login details are incorrect');
             return;
         }
-        res.json('You have successfully logged in')
-        
+        const userPassword = user.rows[0].password;
+        if (decryptIsMatch(password, userPassword)) {
+            res.json('You have successfully logged in')
+        }
+
     } catch (err) {
-        console.error(err.message)
+        console.error(err.message);
     }
 });
+
+
+
+    
 
 //get all personal data for customer
 customersRouter.get('/data/:customerId', async (req, res) => {
